        performed by the action to be audited. This allows creation of
        audited versions of the Shorewall-provided default actions
        (action.Drop and action.Reject).

	Note: The builtin actions are those actions listed in the
	output of 'shorewall show actions' with names begin with a
	lower-case letter.

	Example:

		#ACTION			SOURCE		DEST
		rejNonSyn(audit)	net		all

6)  Up to this release, the behaviors of 'start -f' and 'restart -f'
    has been inconsistent. The 'start -f' command  compares the
    modification times of /etc/shorewall[6] with
    /var/lib/shorewall[6]/restore while 'restart -f' compares with
    /var/lib/shorewall[6]/firewall.

    To make the two consistent, a new LEGACY_FASTSTART option has been
    added. The default value when the option isn't specified is
    LEGACY_FASTSTART=Yes which preserves the old behavior. When
    LEGACY_FASTSTART=No, 'start -f' and 'restart -f' compare with
    /var/lib/shorewall[6]/firewall.

7)  A '-c' (compile) option has been added to the 'restart'
    command in both Shorewall and Shorewall6. It overrides the setting
    of AUTOMAKE and unconditionally forces a recompilation of the
    configuration.

    When both -c and -f are specified, the result is determined by the
    option that appears last.

----------------------------------------------------------------------------
             I V.  R E L E A S E  4 . 4  H I G H L I G H T S
----------------------------------------------------------------------------

1)  Support for Shorewall-shell has been discontinued. Shorewall-perl
    has been combined with Shorewall-common to produce a single
    Shorewall package.

2)  Support for the "Hierarchical Fair Service Curve" (HFSC) queuing
    discipline has been added. HFSC is superior to the "Hierarchical
    Token Bucket" queuing discipline where realtime traffic such as
    VOIP is being used.

    HTB remains the default queuing discipline.
