@@ -141,6 +141,11 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
 		#ACTION			SOURCE		DEST
 		rejNonSyn(audit)	net		all
 
+    h)  There are audited versions of the standard Default Actions
+    	named ADrop and AReject. Note that these audit everything that
+    	they do so you will probably want to make your own copies and
+    	modify them to only audit the packets that you care about. 
+
 6)  Up to this release, the behaviors of 'start -f' and 'restart -f'
     has been inconsistent. The 'start -f' command  compares the
     modification times of /etc/shorewall[6] with
